--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jquery": "3.3.1",
     "jsplumb": "2.8.0",
     "moment": "^2.22.2",
-    "solidity-parser-antlr": "^0.3.2",
+    "@solidity-parser/parser": "^0.13.2",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
